--- a/index.html
+++ b/index.html
@@ -6,22 +6,59 @@
 </head>
 <body>
 
-	<a href="">
-		Home
-	</a>
-	/
-	<a href="contato.html">
-		Contato
-	</a>
+	<table>
+		<!DOCTYPE html>
 
-		<h2>Pagina principal</h2>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque id hendrerit metus. Nunc vitae varius libero. Vestibulum dapibus posuere magna eget hendrerit. Quisque sit amet orci placerat, tempor neque et, molestie ex. Pellentesque a tristique sapien. Donec sapien mi, congue non egestas sed, volutpat egestas ipsum. Vivamus et commodo ex. Aliquam id enim urna. Vestibulum vehicula suscipit neque eu condimentum. Curabitur quis commodo tellus, non varius nisl. Morbi finibus venenatis bibendum. Phasellus condimentum tincidunt elit varius pellentesque. Sed eget turpis vel elit luctus laoreet. Nullam ornare nisi ac vehicula blandit. Integer condimentum sapien eget elit mollis, ac blandit lorem bibendum. In posuere, nibh sit amet rhoncus molestie, dui nunc sodales diam, eu volutpat lectus metus vel metus.
-		</p>
+<html>
+	
+	<head>
+		<title>Meu site</title>
+		<meta charset="utf-8">
+	</head>
 
+	<body>
+		
+		<h2>A empresa</h2>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque id hendrerit metus. Nunc vitae varius libero. Vestibulum dapibus posuere magna eget hendrerit. Quisque sit amet orci placerat, tempor neque et, molestie ex. Pellentesque a tristique sapien. Donec sapien mi, congue non egestas sed, volutpat egestas ipsum. Vivamus et commodo ex. Aliquam id enim urna. Vestibulum vehicula suscipit neque eu condimentum. Curabitur quis commodo tellus, non varius nisl. Morbi finibus venenatis bibendum. Phasellus condimentum tincidunt elit varius pellentesque. Sed eget turpis vel elit luctus laoreet. Nullam ornare nisi ac vehicula blandit. Integer condimentum sapien eget elit mollis, ac blandit lorem bibendum. In posuere, nibh sit amet rhoncus molestie, dui nunc sodales diam, eu volutpat lectus metus vel metus.
+
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque id hendrerit metus.
+
 		</p>
+		<hr>
+
+		<h2>Vantagens de ser cliente</h2>
+		<ol>
+				<li>Atendimento <strong>rápido</strong></li>
+				<li>Preços especiais</li>
+				<li>Muitas cidades</li>
+		</ol>
+
+		<hr> 
+
+		<h2>O que os clientes estão dizendo:</h2>
+		<em>"Vivamus egestas nunc imperdiet, bibendum leo eget, dignissim nisl. Vestibulum accumsan, dui eget consectetur bibendum, neque quam consectetur magna, nec tincidunt erat metus vel quam."</em> <br>
+		<strong>Maria Almeida</strong>
+
+		<hr>
+
+	<h2>Mapa do site</h2>
+	<ul>
+			<li>Home</li>
+			<li>Quem somos</li>
+			<li>Contato</li>
+	</ul>
+
+	<p>
+		<img src="imagens/dragonballsuper.jpg" width="600">
+	</p>
+
+
+	</body>
+
+
+</html>
+
+	</table>
 </body>
 
 </html>
